<resources>
    <string name="app_name">PokerReader</string>

    <!-- Dialogs, Notifications...-->
    <string name="sync_dialog_title">Loading articles...</string>
    <string name="sync_dialog_message">This could take a little while, depending on your internet connection and how many articles are loaded</string>
    <string name="notification_background_service">PokerReader is syncing articles...</string>

    <!-- Sites -->
    <string name="title_sites">Sites</string>
    <string name="sites_pokerstrategy">Pokerstrategy.com</string>
    <string name="sites_pokerfirma">Pokerfirma.com</string>
    <string name="sites_pokerolymp">Pokerolymp.com</string>
    <string name="sites_pokernews">Pokernews.com</string>
    <string name="sites_highstakesdb">Highstakesdb.com</string>
    <string name="sites_hochgepokert">Hochgepokert.com</string>

    <!-- Menus -->
    <string name="article_menu_share">Share</string>
    <string name="share_text">Read \"%1$s\" on %2$s</string>
    <string name="article_menu_copy_link">Copy link to clipboard</string>
    <string name="toast_link_copied">Link copied!</string>
    <string name="article_menu_go_to_site">Go to article Website</string>

    <!-- Prefs -->
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="prefs_section_app_setting">App Settings</string>
    <string name="prefs_section_developer_settings">Developer Settings</string>
    <string name="clear_app_data_title">Clear app data</string>
    <string name="clear_app_data_summary">This will delete all local articles</string>
    <string name="article_age">Article age</string>
    <string name="article_age_summary">Show articles from last %s day(s)</string>
    <string name="app_theme">App Theme</string>
    <string name="app_theme_summary">Set a color theme for PokerReader</string>
    <string name="active_sites_summary">Choose sites you want to load articles from</string>
    <string name="pref_active_sites">Active sites</string>



    <string name="one_day">1 day</string>
    <string name="three_days">3 days</string>
    <string name="five_days">5 days</string>
    <string name="seven_days">7 days</string>
    <string name="ten_days">10 days</string>
    <string name="fourteen_days">14 days</string>

    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="orange">Orange</string>

    <string name="at_least_one_site">Please choose at least one site!</string>
    <string name="prefs_section_app_info">App Info</string>
    <string name="app_summary">%s\n(c) 2015 Max Batt</string>


    <!-- Pref Keys - Do not translate-->
    <string name="pref_key_site_pokerstrategy" translatable="false">pokerstrategy.com</string>
    <string name="pref_key_site_pokerfirma" translatable="false">pokerfirma.com</string>
    <string name="pref_key_site_pokerolymp" translatable="false">pokerolymp.com</string>
    <string name="pref_key_site_pokernews" translatable="false">pokernews.com</string>
    <string name="pref_key_site_highstakesdb" translatable="false">highstakesdb.com</string>
    <string name="pref_key_site_hochgepokert" translatable="false">hochgepokert.com</string>

    <string name="pref_key_app_cleared" translatable="false">appCleared</string>
    <string name="pref_article_age" translatable="false">article_age</string>
    <string name="pref_key_should_sync" translatable="false">should_sync</string>
    <string name="pref_shouldReload" translatable="false">age_has_changed</string>

    <string name="pref_key_app_theme" translatable="false">app_theme</string>
    <string name="pref_app_theme" translatable="false">app_theme</string>

    <string name="blue_value" translatable="false">#1788CF</string>
    <string name="green_value" translatable="false">#096B05</string>
    <string name="red_value" translatable="false">#9E0B0B</string>
    <string name="purple_value" translatable="false">#9400D3</string>
    <string name="orange_value" translatable="false">#DE9828</string>

    <string name="active_sites" translatable="false">active_sites</string>
    <string name="pref_key_active_sites" translatable="false">active_sites</string>
    <string name="pref_key_app_info" translatable="false">app_info</string>
</resources>
