<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/prefs_section_app_setting">

        <ListPreference
            android:key="@string/pref_article_age"
            android:title="@string/article_age"
            android:summary="@string/article_age_summary"
            android:entries="@array/article_age_keys"
            android:entryValues="@array/article_age_values"
            android:defaultValue="3"
            />

        <MultiSelectListPreference
            android:dialogTitle="@string/pref_active_sites"
            android:key="@string/pref_key_active_sites"
            android:summary="@string/active_sites_summary"
            android:title="@string/pref_active_sites"
            android:entries="@array/active_sites_keys"
            android:entryValues="@array/active_sites_values"
            android:defaultValue="@array/active_sites_values"
            />

        <ListPreference
            android:key="@string/pref_app_theme"
            android:title="@string/app_theme"
            android:summary="@string/app_theme_summary"
            android:entries="@array/app_theme_keys"
            android:entryValues="@array/app_theme_values"
            android:defaultValue="@string/blue_value"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_section_app_info">

        <Preference
            android:key="@string/pref_key_app_info"
            android:title="@string/app_name"
            android:summary="@string/app_summary"
            />



    </PreferenceCategory>

</PreferenceScreen>